--- a/MyLibrary/settings.gradle
+++ b/MyLibrary/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':lazylibrary', ':observer_demo', ':rxretrofitlibrary'
+include ':app', ':lazylibrary', ':observer_demo','customcontrols','toolbar'
