lazy_vp_lib添加使用说明注释

--- a/MyLibrary/app/build.gradle
+++ b/MyLibrary/app/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
+    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
     androidTestImplementation 'junit:junit:4.12'
-    implementation project(':lazylibrary')
+    implementation project(':lazy_vp_lib')
 }
