--- a/MyLibrary/lazy_vp_lib/build.gradle
+++ b/MyLibrary/lazy_vp_lib/build.gradle
@@ -26,6 +26,6 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
+    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
     testImplementation 'junit:junit:4.12'
 }
