--- a/MyLibrary/lib-permission/src/main/AndroidManifest.xml
+++ b/MyLibrary/lib-permission/src/main/AndroidManifest.xml
@@ -57,5 +57,10 @@
     <!--<activity android:name=".permission.PermissionActivity" />-->
     <!--</application>-->
 
+    <application>
+        <activity
+            android:name=".PermissionActivity"
+            />
+    </application>
 
 </manifest>
