--- a/MyLibrary/app/build.gradle
+++ b/MyLibrary/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'android-aspectjx'
 
 android {
     compileSdkVersion 28
@@ -26,4 +27,5 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
     androidTestImplementation 'junit:junit:4.12'
     implementation project(':lazy_vp_lib')
+    implementation project(':lib-permission-aop')
 }
