将AOP实现的权限库和登录拦截库,整合到AOP库

--- a/MyLibrary/lib-aop/src/main/AndroidManifest.xml
+++ b/MyLibrary/lib-aop/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
 
     <application>
         <activity
-            android:name=".PermissionRequestActivity"
+            android:name=".permission.PermissionRequestActivity"
             android:theme="@style/translucent"/>
     </application>
 
